# src/main/java/io/kemalthes/semesterwork3/dto/OsrmRoute.java
@@ -1,0 +1,7 @@
+package io.kemalthes.semesterwork3.dto;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+
+@JsonIgnoreProperties(ignoreUnknown = true)
+public record OsrmRoute(Double distance, Double duration, String geometry) {
+}
